--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
 Wafi Mohamed <med.wf95@gmail.com>
+Fatima Kuirse <fatimaberline535@gmail.com>
